chore: update logo and favicon, change name <Teatrope> to <teatrope>

--- a/src/components/shared/header.astro
+++ b/src/components/shared/header.astro
@@ -14,7 +14,7 @@ const header = t?.header;
         <button class="menu-toggle" aria-label="open menu button">☰</button>
         <a href={home} class="logo-link" aria-label="home link">
             <img src="" alt="Logo Teatrope" class="logo-ico"/>
-            <p class="logo-link-name">Teatrope</p>
+            <p class="logo-link-name">teatrope</p>
         </a>
     </div>
 
