--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -26,7 +26,7 @@ import FAQCard from "../../components/faq/faqcard.astro";
 import InfoBanner from "../../components/general/infobanner.astro";
 ---
 
-<AppLayout title="Teatrope" t={t} lang={lang}>
+<AppLayout title="teatrope" t={t} lang={lang}>
 
   <div id="main">
     <MainCard t={t}></MainCard>
